[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "escapelib"
readme = "ReadMe.md"
description = "A library to escape characters for various contexts."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["escapelib"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"rangeslicetools", # @ git+https://github.com/KOLANICH-libs/rangeslicetools.py.git
	"charRanges", # @ git+https://github.com/UniGrammar/charRanges.py
]

[project.urls]
Homepage = "https://github.com/UniGrammar/escapelib.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["escapelib", "escapelib.*"]

[tool.setuptools_scm]
